--- a/dotnetCourse/appsettings.json
+++ b/dotnetCourse/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerConnection": "Server=.;Database=dotnetCourse;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
